# anime-scout

./: .gitignore  LICENSE  README.md  pyproject.toml
src/anime_scout/: cli.py
tests/: test_cli.py
