[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-scout"
version = "0.1.0"
description = "Anime search/info CLI using AniList (rich output, caching, trailers)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DaveR0b0t" }]
dependencies = [
  "requests>=2.31",
  "rich>=13.0"
]

[project.scripts]
anime = "anime_scout.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

